# CASPToolkit

./: README.md  pyproject.toml  setup.py
PDBToolkit/CASP/: sup_template.py
casptoolkit/: cli.py  config.py
casptoolkit/CASP/: af3server_to_pro.py  phenix_clashscore.py  qa_af3.py  relax_prism.py  sup_assemble.py  sup_homooligo.py  sup_template.py
casptoolkit/PDBOps/: __init__.py  _utils.py  cif2pdb.py  merge_structure.py  reassign_chain_id.py  renumber_atom.py  renumber_atoms.py
